[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-shield"
version = "0.1.0"
description = "Protect your LLM applications from prompt injection attacks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["llm", "prompt-injection", "security", "ai-safety", "chatbot"]
dependencies = [
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "httpx>=0.26.0",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic-settings>=2.2.0",
    "redis>=5.0.1",
    "python-dotenv>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/25thblame/prompt-shield"
Documentation = "https://github.com/25thblame/prompt-shield#readme"
Repository = "https://github.com/25thblame/prompt-shield"
Issues = "https://github.com/25thblame/prompt-shield/issues"

[tool.setuptools.packages.find]
include = ["prompt_shield*"]
